manifests/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: andreas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: hashicorp/http-echo
          args:
            - "-text=hello from backend"
            - "-listen=:5678"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: andreas
spec:
  selector:
    app: backend
  ports:
    - port: 5678
      targetPort: 5678
