manifests/postgres.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: andreas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18-bookworm
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: andreas
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
