manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: andreas-ingress
  namespace: andreas
spec:
  tls:
    - hosts:
        - andreas.local
      secretName: andreas-local-tls
  rules:
    - host: andreas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
